      checks on user error leading to attempted infinite recursion (and on
      some platforms to crashing \R).

      \item PCRE has been updated to version 8.31, a bug-fix release.

      \item The included version of \code{liblzma} has been updated to
      version 5.0.4, a minor bug-fix release.

      \item New function \code{.bincode()}, a \sQuote{bare-bones}
      versions of \code{cut.default(labels = FALSE)}.
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item \code{array()} is now implemented in C code (for speed) when
      \code{data} is atomic or an unclassed list (so it is known that
      \code{as.vector(data)} will have no class to be used by \code{rep()}).
      
      \item \code{rep()} is faster and uses less memory,
      substantially so in some common cases (e.g. if \code{times} is of
      length one or \code{length.out} is given, and \code{each = 1}).
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now checks if a package can be loaded
      by \code{library(pkgname, lib.loc = "somewhere")} without being on
      the library search path (unless it is already installed in
      \code{.Library}, when it always will be).

      \item \command{R CMD check --as-cran} notes \sQuote{hidden} files
      and directories (with names starting with a dot) that are not
      needed for the operation of \command{R CMD INSTALL} or \code{R CMD
	build}: such files should be excluded from the published tarball.

      \item \command{R CMD check} (if checking subdirectories) checks
      that the \R code in any demos is ASCII and can be parsed, and
      warns if not.
      
      \item When \code{R CMD Rd2pdf} is used with \file{inputenx.sty},
      it allows further characters (mainly for Eastern European
      languages) by including \file{ix-utf8enc.dfu} (if available).
      (Wish of \PR{14989}.)
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{